일관성 추가